[package]
name = "swhid-lib"
version = "0.1.0"
edition = "2021"
description = "Minimal reference implementation of Software Hash Identifier (SWHID) computation"
license = "MIT"
repository = "https://github.com/your-username/swhid-rs"
keywords = ["swhid", "software-heritage", "hash", "identifier", "reference"]
categories = ["data-structures", "encoding"]

[dependencies]
sha1-checked = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"

[lib]
name = "swhid"
path = "src/lib.rs" 