[package]
name = "swhid-lib"
version = "0.1.0"
edition = "2021"
description = "Minimal reference implementation of Software Hash Identifier (SWHID) computation"
license = "MIT"
repository = "https://github.com/your-username/swhid-rs"
keywords = ["swhid", "software-hash", "hash", "identifier", "reference"]
categories = ["data-structures", "encoding"]

[dependencies]
sha1-checked = "0.10.0"
sha2 = "0.10.8"
hex = "0.4.3"
tempfile = "3.8.1"
clap = { version = "4.0", features = ["derive"] }

[dependencies.git2]
version = "0.18"
optional = true

[features]
default = []
git = ["git2"]

[dev-dependencies]
criterion = "0.7.0"

[[bin]]
name = "swhid-cli"
path = "src/main.rs"

[lib]
name = "swhid"
path = "src/lib.rs" 

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1 
